--- a/Домашнее задание 1.1
+++ b/Домашнее задание 1.1
@@ -1,3 +1,5 @@
+//Реализуйте 3 метода, чтобы в каждом из них получить разные исключения.
+
 public class Homework1.1 {
     public static void main(String[] args) {
         ExceptionsMethods Exceptions = new ExceptionsMethods();
